--- a/README
+++ b/README
@@ -4,17 +4,17 @@ the engine to support the OpenSSL ENGINE_load_ssl_client_cert()
 function, which returns among other things a x509 certificate.  
 
 Since the function provides no way that I can see to specify which
-certificate to "load", I've done this by adding a method to the
-engine to set the certificate name (slot-id) before actually getting the
+certificate to "load", the implementation done this by adding a method to the
+engine to set the certificate name (slot-id). It is used before actually getting the
 certificate.  The way the function would be used when interfacing with
 OpenSSL would be roughly as follows:
 
        // Set the certificate name (slot-id) to use for a subsequent certificate request
-       ENGINE_ctrl_cmd(e, "CERT_ID", strlen(cert_name), cert_name, NULL, 0));
+       ENGINE_ctrl_cmd(e, "CERT_ID", strlen(cert_name), cert_name, NULL, 0);
 
        // Get the certificate from the engine
        ENGINE_load_ssl_client_cert(e, https_ssl, ca_dn, &cert,
-&key,&othercerts, NULL,NULL)
+									&key,&othercerts, NULL,NULL);
 
        //  Use the certificate when establishing an SSL session
        SSL_CTX_use_certificate(https_ctx, cert);
